# profond-psp22-contract

./: LICENSE  README.md  package.json  tsconfig.json
artifacts/: base_token.contract  base_token.json  base_token.wasm
contracts/base_token/: Cargo.toml  lib.rs
logics/: Cargo.toml
logics/impls/: mod.rs  psp22_token.rs
logics/traits/: psp22_token.rs
release/: base_token.contract  base_token.json  base_token.wasm
tests/: psp22.spec.ts
