[package]
name = "base_token"
version = "1.0.0"
authors = ["Irfi M. <mrizkyirfianto@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.1.0", git = "https://github.com/emarai/openbrush-contracts", default-features = false, features = ["psp22", "pausable"] }

psp22_extension_pkg = {path = "../../logics", default-features = false}


[lib]
name = "base_token"
path = "lib.rs"
crate-type = [
        # Used for normal contract Wasm blobs.
        "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "psp22_extension_pkg/std"
]
ink-as-dependency = []
